--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: 1.19
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v backend/cmd/main.go
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v backend/...
