chore: change Makefile

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,6 +1,8 @@
 APP_NAME=backend
 
 run: build
+	$(info "RUN docker containers")
+	docker compose up -d || true
 	$(info "RUN $(APP_NAME)")
 	sudo ./bin/$(APP_NAME)
 
@@ -9,6 +11,8 @@ build: clean
 	go mod download && go build -o bin/$(APP_NAME) cmd/main.go
 
 clean:
+	$(info "STOP docker containers")
+	docker compose stop || true
 	$(info "CLEAN")	
 	rm -rf bin || true
 
