chore: change .env.example; add Server config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,10 @@
 INTERFACE=eth0
 
-HOST=localhost
-PORT=5432
-USERNAME=user
-PASSWORD=1234
-DATABASE=bezdna
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USERNAME=user
+POSTGRES_PASSWORD=1234
+POSTGRES_DATABASE=bezdna
+
+# SERVER_HOST=localhost
+SERVER_PORT=2137
