--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,8 +4,8 @@ services:
     image: 'postgres:latest'
     restart: always
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}:5432
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: 1234
-      POSTGRES_DB: bezdna
+      POSTGRES_USER: ${POSTGRES_USERNAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DATABASE}
