--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,10 @@
-INTERFACE=eth0
+INTERFACE=lon0
 
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5433
 POSTGRES_USERNAME=user
 POSTGRES_PASSWORD=1234
 POSTGRES_DATABASE=bezdna
 
-# SERVER_HOST=localhost
+SERVER_HOST=localhost
 SERVER_PORT=2137
