feat: add implementations of main backend handlers: creating, getting services&streams

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,12 @@
-INTERFACE=lon0
+INTERFACE=lo
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_USERNAME=user
 POSTGRES_PASSWORD=1234
 POSTGRES_DATABASE=bezdna
+
+DATABASE_URL='postgresql://localhost/bezdna?user=user&password=1234&port=5433'
 
 SERVER_HOST=localhost
 SERVER_PORT=2137
