--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.10.0"
 futures = "0.3.29"
 futures-util = "0.3.29"
 hyper = "1.0.1"
+lazy_static = "1.4.0"
 log = "0.4.20"
 notify = "6.1.1"
 pnet = "0.34.0"
