--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.6.20", features = ["macros"] }
+chrono = "0.4.38"
 env_logger = "0.10.0"
 futures = "0.3.29"
 futures-util = "0.3.29"
