[BEZDNA-2] feat: add database migration, repositories

--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.83"
 axum = { version = "0.6.20", features = ["macros"] }
 chrono = "0.4.38"
 env_logger = "0.10.0"
@@ -16,11 +17,13 @@ lazy_static = "1.4.0"
 log = "0.4.20"
 notify = "6.1.1"
 pnet = "0.34.0"
+regex = "1.10.4"
 serde = { version = "1.0.192", features = ["derive"] }
 sqlx = { version = "0.7.2", features = [
-    "runtime-tokio-rustls",
+    "runtime-tokio",
     "any",
     "postgres",
+    "chrono",
 ] }
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
