[BEZDNA-3] feat: AppResponse, AppError

--- a/rust-backend/.env.example
+++ b/rust-backend/.env.example
@@ -8,3 +8,5 @@ POSTGRES_DATABASE=bezdna
 
 SERVER_HOST=localhost
 SERVER_PORT=2137
+
+DATABASE_URL=postgresql://${POSTGRES_HOST}/${POSTGRES_DATABASE}?user=${POSTGRES_USERNAME}&password=${POSTGRES_PASSWORD}&port=${POSTGRES_PORT}
