--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -19,6 +19,7 @@ notify = "6.1.1"
 pnet = "0.34.0"
 regex = "1.10.4"
 serde = { version = "1.0.192", features = ["derive"] }
+serde_json = "1.0.117"
 sqlx = { version = "0.7.2", features = [
     "runtime-tokio",
     "any",
