[ALPHA-4] chore: add config provider; remove backend dir

--- a/rust-backend/Makefile
+++ b/rust-backend/Makefile
@@ -41,12 +41,12 @@ migration-reset:
 
 .PHONY: compose-up
 compose-up:
-	docker compose -p bezdna -f ./docker-compose.yaml up -d
+	docker compose -p alpha -f ./docker-compose.yaml up -d
 
 .PHONY: compose-stop
 compose-stop:
-	docker compose -p bezdna -f ./docker-compose.yaml stop
+	docker compose -p alpha -f ./docker-compose.yaml stop
 
 .PHONY: compose-down
 compose-down:
-	docker compose -p bezdna -f ./docker-compose.yaml down
+	docker compose -p alpha -f ./docker-compose.yaml down
