--- a/rust-backend/Cargo.toml
+++ b/rust-backend/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.83"
 axum = { version = "0.6.20", features = ["macros"] }
 chrono = "0.4.38"
+dotenv = "0.15.0"
 env_logger = "0.10.0"
 futures = "0.3.29"
 futures-util = "0.3.29"
